# My_First_Project

./: Main_Script.py  Main_Scrpit_bonuses.py  class_EUR.py  class_ILS.py  class_USD.py  my_test.py  pyproject.toml  results_list.txt
