[tool.poetry]
name = "first-project"
version = "0.1.0"
description = ""
authors = ["kfirsandberg <kfirsan07@gmail.com>"]
readme = "README.md"
packages = [{include = "first_project"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

